# armyknife

./: .copier-answers.yml  .mise.toml  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  clippy.toml  codecov.yml  lefthook.yml  sgconfig.yml  srt-settings.json
.claude/skills/test/: SKILL.md
.gemini/: config.yaml  styleguide.md
.github/workflows/: release-please.yml  release.yml  renovate-copier.yml  test.yml
.sg/rules/: no-direct-command-new.yml
.sg/tests/: no-direct-command-new-test.yml
.sg/tests/__snapshots__/: no-direct-command-new-snapshot.yml
crates/config-schema-gen/: Cargo.toml
crates/config-schema-gen/src/: main.rs
docs/: architecture.md  config-schema.json  hooks.md  logging.md  setup.md
rule-tests/: no-assert-contains-test.yml
rule-tests/__snapshots__/: no-assert-contains-snapshot.yml
rules/: no-assert-contains.yml
src/: cache.rs  cli.rs  lib.rs  main.rs  update.rs
src/ai/: mod.rs
src/ai/pr_draft/: common.rs  mod.rs  new.rs  review.rs  submit.rs
src/ai/review/: client.rs  common.rs  error.rs  mod.rs  request.rs  reviewer.rs  wait.rs
src/ai/review_gemini/: error.rs  mod.rs
src/commands/: mod.rs
src/commands/ai/: mod.rs
src/commands/ai/draft/: mod.rs
src/commands/ai/pr_draft/: common.rs  hooks.rs  mod.rs  new.rs  review.rs  submit.rs
src/commands/ai/review/: client.rs  common.rs  detector.rs  error.rs  mod.rs  request.rs  reviewer.rs  wait.rs
src/commands/ai/review/detectors/: coderabbit.rs  devin.rs  gemini.rs  mod.rs
src/commands/cc/: agent_task.rs  auto_pause.rs  bg_task.rs  claude_sessions.rs  clean_detached.rs  error.rs  focus.rs  generate_label.rs  hook.rs  list.rs  mark_read.rs  mod.rs  pane_input.rs  pane_status.rs  pause_timer.rs  process.rs  restore.rs  resume.rs  resurrect.rs  signal.rs  store.rs  tmux.rs  tmux_sync.rs  tty.rs  types.rs  watch.rs  window_status.rs
src/commands/cc/auto_compact/: decision.rs  mod.rs  schedule.rs
src/commands/cc/pane/: mod.rs  process.rs  status.rs
src/commands/cc/sweep/: mod.rs  service.rs
src/commands/cc/tui/: app.rs  clean_progress.rs  clean_view.rs  event.rs  mod.rs  pr_fetch.rs  session_tree.rs  ui.rs  worktree_session_children.rs  worktree_view.rs
src/commands/config/: mod.rs
src/commands/doctor/: mod.rs
src/commands/gh/: mod.rs
src/commands/gh/check_pr_review/: api.rs  mod.rs
src/commands/gh/check_pr_review/format/: full.rs  mod.rs  summary.rs
src/commands/gh/check_pr_review/models/: comment.rs  tests.rs
src/commands/gh/issue_agent/: body_compare.rs  mod.rs  testing.rs
src/commands/gh/issue_agent/commands/: common.rs  diff.rs  init.rs  mod.rs  pull.rs  refresh.rs  review.rs  test_helpers.rs  view.rs
src/commands/gh/issue_agent/format/: mod.rs  text.rs  time.rs
src/commands/gh/issue_agent/models/: author.rs  comment.rs  editable.rs  issue.rs  issue_template.rs  metadata.rs  mod.rs  new_issue.rs  timeline_event.rs
src/commands/gh/issue_agent/storage/: error.rs  issue_storage.rs  issue_storage_diff.rs  issue_storage_init.rs  issue_storage_read.rs  issue_storage_write.rs  mod.rs  paths.rs  read.rs
src/commands/gh/pr_review/: api.rs  changeset.rs  details.rs  error.rs  markdown.rs  mod.rs  reply.rs  review.rs  storage.rs
src/commands/gh/pr_review/format/: full.rs  mod.rs  summary.rs
src/commands/name_branch/: error.rs  mod.rs
src/commands/name_branch/backend/: claude_code.rs  mod.rs  opencode.rs
src/commands/wm/: clean.rs  delete.rs  error.rs  git.rs  list.rs  mod.rs  new.rs  worktree.rs
src/commands/wm/tests/: mod.rs
src/gh/: mod.rs
src/gh/check_pr_review/: api.rs  format.rs  mod.rs  models.rs
src/gh/check_pr_review/format/: full.rs  mod.rs  summary.rs
src/gh/check_pr_review/models/: comment.rs  mod.rs  pr_data.rs  review.rs  tests.rs  thread.rs
src/gh/issue_agent/: mod.rs  testing.rs
src/gh/issue_agent/commands/: common.rs  mod.rs  pull.rs  push.rs  refresh.rs  test_helpers.rs  view.rs
src/gh/issue_agent/format/: text.rs  time.rs
src/gh/issue_agent/models/: author.rs  comment.rs  issue.rs  metadata.rs  mod.rs
src/gh/issue_agent/storage/: diff.rs  issue_storage.rs  issue_storage_diff.rs  issue_storage_read.rs  issue_storage_write.rs  mod.rs  paths.rs  read.rs  write.rs
src/git/: branch.rs  error.rs  mod.rs  repo.rs  test_utils.rs
src/github/: client.rs  comment.rs  error.rs  issue.rs  mock.rs  mod.rs  pr.rs  repo.rs
src/human_in_the_loop/: approval.rs  document.rs  editor.rs  lock.rs  mod.rs  tmux.rs
src/infra/: claude.rs  external_tool.rs  launchd.rs  mod.rs
src/infra/git/: branch.rs  cmd.rs  error.rs  fetch_lock.rs  github.rs  mod.rs  repo.rs  test_utils.rs
src/infra/github/: client.rs  comment.rs  error.rs  issue.rs  mock.rs  mod.rs  pr.rs  repo.rs
src/infra/notification/: error.rs  fallback.rs  hammerspoon.rs  icon.rs  mod.rs  terminal_notifier.rs  types.rs
src/infra/process/: mod.rs
src/infra/tmux/: layout.rs  mod.rs
src/name_branch/: backend.rs  mod.rs
src/name_branch/backend/: claude_code.rs  mod.rs  opencode.rs
src/shared/: active_session.rs  cache.rs  cleanup.rs  command.rs  config.rs  diff.rs  dirs.rs  env_var.rs  hex.rs  hooks.rs  log.rs  mod.rs  repos_root.rs  table.rs  update.rs  yaml_frontmatter.rs
src/shared/human_in_the_loop/: approval.rs  document.rs  editor.rs  error.rs  exit_code.rs  lock.rs  mod.rs  simple_edit.rs  tmux.rs
src/shared/testing/: approval_env.rs  git_repo.rs  mod.rs
src/testing/: factories.rs  git_repo.rs  mod.rs
src/tmux/: mod.rs
src/wm/: clean.rs  common.rs  delete.rs  error.rs  git.rs  list.rs  mod.rs  new.rs  worktree.rs
src/wm/tests/: helpers.rs  mod.rs
(+21 files in other folders)
