[package]
name = "armyknife"
version = "0.1.21"
edition = "2024"
authors = ["Hayato Kawai <fohte.hk@gmail.com>"]
description = "Personal CLI toolkit written in Rust"
repository = "https://github.com/fohte/armyknife"
license = "MIT"

[[bin]]
name = "a"
path = "src/main.rs"

[dependencies]
async-trait = "=0.1.89"
chrono = "=0.4.42"
clap = { version = "=4.5.54", features = ["derive"] }
clap_complete = "=4.5.64"
dirs = "=6.0.0"
git2 = { version = "=0.20.3", default-features = false, features = ["vendored-libgit2", "https"] }
octocrab = "=0.49.5"
open = "=5.3.3"
tokio = { version = "=1.49.0", features = ["rt-multi-thread", "macros"] }
indoc = "=2.0.7"
regex = "=1.12.2"
self_update = { version = "=0.42.0", features = ["rustls", "compression-flate2"], default-features = false }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
serde_yaml = "=0.9.34"
sha2 = "=0.10.9"
shlex = "=1.3.0"
similar = "=2.7.0"
tempfile = "=3.24.0"
termimad = "=0.34.1"
thiserror = "=2.0.17"
indicatif = "=0.18.3"

[dev-dependencies]
rstest = "=0.26.1"
serial_test = "=3.2.0"
