[package]
name = "armyknife"
version = "0.1.89"
edition = "2024"
authors = ["Hayato Kawai <fohte.hk@gmail.com>"]
description = "Personal CLI toolkit written in Rust"
repository = "https://github.com/fohte/armyknife"
license = "MIT"

[[bin]]
name = "a"
path = "src/main.rs"

[dependencies]
anyhow = "=1.0.100"
async-trait = "=0.1.89"
chrono = "=0.4.43"
clap = { version = "=4.5.56", features = ["derive"] }
clap_complete = "=4.5.65"
git2 = { version = "=0.20.4", default-features = false, features = ["vendored-libgit2", "https"] }
http = "=1.4.0"
octocrab = "=0.49.5"
open = "=5.3.3"
tokio = { version = "=1.49.0", features = ["rt-multi-thread", "macros"] }
indoc = "=2.0.7"
lazy-regex = "=3.5.1"
regex = "=1.12.2"
self_update = { version = "=0.42.0", features = ["rustls", "compression-flate2"], default-features = false }
schemars = "=1.2.1"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
serde_yaml = "=0.9.34"
sha2 = "=0.10.9"
shlex = "=1.3.0"
similar = "=2.7.0"
tempfile = "=3.24.0"
termimad = "=0.34.1"
thiserror = "=2.0.18"
unicode-width = "=0.2.2"
indicatif = "=0.18.3"
ratatui = "=0.30.0"
crossterm = "=0.29.0"
notify = "=8.2.0"
notify-rust = "=4.12.0"

[dev-dependencies]
rstest = "=0.26.1"
temp-env = "=0.3.6"
wiremock = "=0.6.5"

[lints.clippy]
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
disallowed_macros = "deny"
expect_used = "deny"
panic = "deny"
unwrap_used = "deny"
