[workspace]
members = [".", "crates/config-schema-gen"]

# Optimize release profile for build speed rather than runtime performance.
[profile.release]
opt-level = 1
strip = "symbols"

[package]
name = "armyknife"
version = "0.1.211"
edition = "2024"
authors = ["Hayato Kawai <fohte.hk@gmail.com>"]
description = "Personal CLI toolkit written in Rust"
repository = "https://github.com/fohte/armyknife"
license = "MIT"

[lib]
path = "src/lib.rs"

[[bin]]
name = "a"
path = "src/main.rs"

[features]
# Enable JSON Schema generation for the Config type. Only used by the
# config-schema-gen workspace member; off by default so the production
# `a` binary doesn't pull in `schemars` and its derive expansions.
schema-gen = ["dep:schemars"]

[dependencies]
anyhow = "=1.0.102"
chrono = { version = "=0.4.45", features = ["serde"] }
clap = { version = "=4.6.1", features = ["derive"] }
clap_complete = "=4.6.5"
reqwest = { version = "=0.13.4", default-features = false, features = ["rustls", "json", "query"] }
open = "=5.3.5"
percent-encoding = "=2.3.2"
tokio = { version = "=1.52.3", features = ["rt-multi-thread", "macros"] }
indoc = "=2.0.7"
lazy-regex = "=3.6.0"
libc = "=0.2.186"
regex = "=1.12.3"
self_update = { version = "=0.44.0", features = ["reqwest", "rustls", "compression-flate2"], default-features = false }
schemars = { version = "=1.2.1", optional = true }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
serde_yaml = "=0.9.34"
sha2 = "=0.11.0"
shlex = "=2.0.1"
similar = "=3.1.1"
tempfile = "=3.27.0"
termimad = "=0.34.1"
thiserror = "=2.0.18"
unicode-width = "=0.2.2"
indicatif = "=0.18.4"
ratatui = { version = "=0.30.1", default-features = false, features = ["crossterm"] }
crossterm = "=0.29.0"
notify = "=8.2.0"
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["json", "env-filter"] }
tracing-appender = "=0.2.5"
uuid = { version = "=1.23.2", features = ["v4"] }

[dev-dependencies]
rstest = "=0.26.1"
temp-env = "=0.3.6"
wiremock = "=0.6.5"

[lints.clippy]
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
disallowed_macros = "deny"
expect_used = "deny"
panic = "deny"
unwrap_used = "deny"
